# Forza-Dualsense

./: .gitignore  LICENSE  README.md  build.bat  index.html  main.ts  package.json  run_dev.bat  style.css  vite.config.ts
backend/: ipc_server.py  pyproject.toml
backend/modules/: preferences.py
backend/modules/udplistener/: main.py
docs/: README.de.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pl.md  README.pt.md  README.ru.md  README.zh.md
src-tauri/: Cargo.toml  build.rs  installer.nsh  tauri.conf.json
src-tauri/backend/: ipc_server.py  pyproject.toml
src-tauri/backend/modules/: user_preferences.json
src-tauri/backend/modules/dualsense/: main.py
src-tauri/src/: main.rs
