[package]
name = "forza-dualsense"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
fs_extra = "1.3"

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
